Fixed a bug with google podcast

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -52,8 +52,8 @@
                     {{ end }}
                     {{ if isset .Site.Params "googlepodcastfeed"}}
                     <li>
-                        <a href="https://www.google.com/podcasts?feed={{ .Site.Params.googlepodcastfeed }}"
-                            target="_blank" class="navbar-item">
+                        <a href="https://podcasts.google.com/?feed={{ .Site.Params.googlepodcastfeed }}" target="_blank"
+                            class="navbar-item">
                             <img alt="google podcast" src="/images/google-badges/google_podcasts_badge_svg.svg" />
                         </a>
                     </li>
