--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,12 +1,10 @@
 <article class="media">
     <div class="media-content">
         <div class="content">
-            <header class="title is-5 is-family-secondary">
-                <a href="{{ .Permalink }}">{{ .Title }}</a>
+            <header>
+                <h5 class="title is-5 is-family-secondary"><a href="{{ .Permalink }}">{{ .Title }}</a></h5>
             </header>
-            <summary>
-                {{ .Summary }}
-            </summary>
+            {{ .Summary }}
         </div>
     </div>
 </article>
