--- a/layouts/podcast/single.html
+++ b/layouts/podcast/single.html
@@ -5,7 +5,15 @@
             <header class="is-large is-family-secondary">
                 <h1>{{ .Title }}</h1>
             </header>
-            <audio src=" {{ .Params.Audio }}" controls></audio>
+
+            {{ if ne .Params.Video ""}}
+            <p><iframe width="auto" height="100%" src="https://www.youtube.com/embed/{{ .Params.Video }}"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></p>
+            {{ end }}
+
+            <p><audio src=" {{ .Params.Audio }}" controls></audio></p>
+
             {{ .Content }}
         </div>
     </div>
